# cs583_dental

./: .gitignore  README.dataset.txt  README.md  README.roboflow.txt  config.yaml  drag_race.py  evaluate.ipynb  export_onnx.ipynb  export_onnx.py  onnx_inference.ipynb  opg.yaml  predict.ipynb  predict.py  requirements.txt  train.ipynb  train.py
dental_inference_rc/: Cargo.toml  config.yaml  drag_race_data_rust.txt
dental_inference_rc/results/: p48_jpeg_jpg.rf.01140372e4e3eb5608013fb27ee6bc01_20251130T230709.286.json  p48_jpeg_jpg.rf.01140372e4e3eb5608013fb27ee6bc01_20251130T231054.074.json
dental_inference_rc/src/: main.rs
