[package]
name = "dental_inference_rc"
version = "0.1.0"
edition = "2024"

[dependencies]

ndarray = "0.15"
image = "0.24"

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

anyhow = "1.0"
clap = { version = "4.2", features = ["derive"] }

log = "0.4"
env_logger = "0.10"
chrono = "0.4"
ort = { version = "2.0.0-rc.10", features = ["ndarray"] }
rayon = "1.11.0"


